--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -15,16 +15,12 @@
     "editor.minimap.enabled": false,
     "editor.lineNumbers": "off",
     "editor.guides.indentation": false,
-
-    // Silence the Noise
-    "breadcrumbs.enabled": false,
     "scm.diffDecorations": "none",
     "editor.hover.delay": 1500,
     "editor.hover.enabled": true,
     "editor.matchBrackets": "never",
     "workbench.tips.enabled": false,
     "editor.colorDecorators": false,
-    "git.decorations.enabled": false,
     "workbench.startupEditor": "none",
     "editor.lightbulb.enabled": "off",
     "editor.selectionHighlight": false,
@@ -40,13 +36,16 @@
     "workbench.editor.enablePreviewFromQuickOpen": false,
     "editor.gotoLocation.multipleImplementations": "goto",
     "editor.gotoLocation.multipleTypeDefinitions": "goto",
+    "git.enabled": true,
+    "git.decorations.enabled": true,
+
 
     // Typography
     "editor.fontFamily": "Operator Mono Lig, Geist Mono, JetBrains Mono, Fira Code",
-    "editor.suggestFontSize": 15,
+    "editor.suggestFontSize": 17,
     "editor.suggestLineHeight": 20,
     "terminal.integrated.lineHeight": 1,
-    "terminal.integrated.fontSize": 15,
+    "terminal.integrated.fontSize": 18,
     "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font Mono",
 
     "search.useIgnoreFiles": false,
@@ -60,10 +59,7 @@
         ".phpunit.result.cache": true
     },
 
-    /**
-    * Code
-    **/
-    // Include "-" in word selection.
+    // Code
     "editor.wordSeparators": "`~!@#%^&*()=+[{]}\\|;:'\",.<>/?",
     "emmet.includeLanguages": {
         "blade": "html",
@@ -74,12 +70,16 @@
     },
     "files.associations": {
         ".php_cs": "php",
-        ".php_cs.dist": "php"
+        ".php_cs.dist": "php",
+        "*.css": "tailwindcss",
+        "*.pcss": "tailwindcss",
+        "*.postcss": "tailwindcss",
     },
 
     /**
     * Prettier
     **/
+
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
         "editor.formatOnSave": true
@@ -105,12 +105,8 @@
     "explorer.sortOrder": "type",
     "prettier.tabWidth": 4,
     "workbench.tree.indent": 15,
-    "[html]": {
-        "editor.defaultFormatter": "apility.beautify-blade",
-        "editor.formatOnSave": true
-    },
-    "editor.wordWrapColumn": 120,
-    "files.autoSave": "afterDelay",
+  "editor.wordWrapColumn": 120,
+    "files.autoSaveDelay": 1000,
     "[css]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
         "editor.formatOnSave": true
@@ -131,22 +127,17 @@
     "editor.fontLigatures": "'ss01', 'ss02', 'ss03', 'ss04', 'ss05', 'ss06', 'ss07', 'ss08', 'calt', 'dlig'",
     "diffEditor.wordWrap": "on",
     "notebook.output.wordWrap": true,
-    "editor.fontSize": 15,
+    "editor.fontSize": 18,
     "editor.minimap.maxColumn": 250,
     "codesnap.containerPadding": "8em",
     "codesnap.boxShadow": "rgba(0, 0, 0, 0.55) 0px 12px 24px",
     "explorer.confirmDelete": false,
     "editor.accessibilitySupport": "off",
-    "chat.editor.wordWrap": "on",
-    "editor.wordWrap": "wordWrapColumn",
-    "[php]": {
-        "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
-    },
+  "chat.editor.wordWrap": "on",
     "editor.fontWeight": "400",
-    "workbench.activityBar.location": "hidden",
-    "workbench.statusBar.visible": false,
+  "workbench.activityBar.location": "hidden",
     "editor.inlineSuggest.suppressSuggestions": true,
-    "codesnap.backgroundColor": "#FFC540",
+    "codesnap.backgroundColor": "#6F4E37",
     "codesnap.showLineNumbers": false,
     "codesnap.roundedCorners": true,
     "editor.padding.top": 16,
@@ -176,16 +167,47 @@
           ]
     },
       "vscode_custom_css.imports": [
-          "file:///C:/Users/caiop/programing/vscode-style/custom.css",
-          "file:///C:/Users/caiop/programing/vscode-style/custom.js"
+          "file:///home/caiop/programing/vscode-style/vscode/custom.css",
+          "file:///home/caiop/programing/vscode-style/vscode/custom.js"
 
-        ],
-        "workbench.colorTheme": "Night Operator",
+      ],
         "workbench.iconTheme": "symbols",
         "workbench.productIconTheme": "fluent-icons",
         "workbench.sideBar.location": "right",
       "workbench.tree.enableStickyScroll": false,
       "database-client.autoSync": true,
-      "chat.commandCenter.enabled": false,
       "terminal.integrated.cursorStyle": "line",
+      "mssql.connectionGroups": [
+          {
+              "name": "ROOT",
+              "id": "265D5B62-6732-4643-BFCB-DC05F0A19271"
+          }
+      ],
+      "mssql.connections": [],
+      "redhat.telemetry.enabled": true,
+      "[markdown]": {
+          "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
+      },
+      "workbench.colorTheme": "BrainX",
+      "files.autoSave": "afterDelay",
+      "window.commandCenter": false,
+      "workbench.editor.editorActionsLocation": "titleBar",
+      "workbench.layoutControl.enabled": false,
+      "[typescript]": {
+          "editor.defaultFormatter": "vscode.typescript-language-features"
+      },
+      "[scss]": {
+          "editor.defaultFormatter": "vscode.css-language-features"
+      },
+      "[html]": {
+          "editor.defaultFormatter": "vscode.html-language-features"
+      },
+      "workbench.statusBar.visible": false,
+      "[advpl]": {
+          "editor.defaultFormatter": "TOTVS.tds-vscode"
+      },
+      "mssql.autoDisableNonTSqlLanguageService": true,
+      "csv-edit.enableWrapping": false,
+      "explorer.confirmDragAndDrop": false,
+
   }
